--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -2,15 +2,30 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 # Inserts a blank line between shell prompts
-add_newline = false
+add_newline = true
 
 # Make promt a single line isntead of two lines
 [line_break]
-disabled = true
+disabled = false
 
 # Replace the '❯' symbol in the prompt with '➜'
 [character] # The name of the module we are configuring is 'character'
-success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+# success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
+success_symbol = '[❯](bold green)' 
+
+[directory]
+read_only = " "
+truncation_length = 3
+truncation_symbol = "~/"
+
+[git_commit]
+disabled = true
+
+[git_state]
+disabled = true
+
+[git_status]
+disabled = true
 
 # Disable the package module, hiding it from the prompt completely
 [package]
