--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -41,16 +41,34 @@
                 "action": "prevTab"
             },
             "keys": "alt+h"
+        },
+        {
+            "command": "toggleFocusMode",
+            "keys": "f12"
+        },
+        {
+            "command": "toggleFocusMode",
+            "keys": "alt+shift+enter"
+        },
+        {
+            "command": "unbound"
+        },
+        {
+            "command": "markMode"
+        },
+        {
+            "command": "toggleShaderEffects",
+            "keys": "f10"
         }
     ],
     "alwaysShowTabs": true,
-    "centerOnLaunch": false,
+    "centerOnLaunch": true,
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-    "initialCols": 90,
-    "initialRows": 20,
-    "launchMode": "fullscreen",
+    "initialCols": 155,
+    "initialRows": 43,
+    "launchMode": "focus",
     "newTabMenu": 
     [
         {
@@ -874,48 +892,6 @@
             "window": 
             {
                 "applicationTheme": "dark",
-                "useMica": false
-            }
-        },
-        {
-            "name": "legacyDark",
-            "tab": 
-            {
-                "background": null,
-                "showCloseButton": "always",
-                "unfocusedBackground": null
-            },
-            "window": 
-            {
-                "applicationTheme": "dark",
-                "useMica": false
-            }
-        },
-        {
-            "name": "legacyLight",
-            "tab": 
-            {
-                "background": null,
-                "showCloseButton": "always",
-                "unfocusedBackground": null
-            },
-            "window": 
-            {
-                "applicationTheme": "light",
-                "useMica": false
-            }
-        },
-        {
-            "name": "legacySystem",
-            "tab": 
-            {
-                "background": null,
-                "showCloseButton": "always",
-                "unfocusedBackground": null
-            },
-            "window": 
-            {
-                "applicationTheme": "system",
                 "useMica": false
             }
         }
