updated windows terminal settings

--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -83,7 +83,7 @@
             "backgroundImageAlignment": "center",
             "backgroundImageOpacity": 0.5,
             "backgroundImageStretchMode": "uniformToFill",
-            "colorScheme": "Catppuccin Mocha Purple Modded",
+            "colorScheme": "Catppuccin Mocha Blue Modded",
             "cursorShape": "filledBox",
             "experimental.retroTerminalEffect": false,
             "font": 
@@ -286,6 +286,29 @@
             "yellow": "#F9E2AF"
         },
         {
+            "background": "#000000",
+            "black": "#45475A",
+            "blue": "#89B4FA",
+            "brightBlack": "#585B70",
+            "brightBlue": "#89B4FA",
+            "brightCyan": "#94E2D5",
+            "brightGreen": "#A6E3A1",
+            "brightPurple": "#F5C2E7",
+            "brightRed": "#F38BA8",
+            "brightWhite": "#A6ADC8",
+            "brightYellow": "#F9E2AF",
+            "cursorColor": "#F5E0DC",
+            "cyan": "#94E2D5",
+            "foreground": "#CDD6F4",
+            "green": "#A6E3A1",
+            "name": "Catppuccin Mocha Black Modded",
+            "purple": "#F5C2E7",
+            "red": "#F38BA8",
+            "selectionBackground": "#585B70",
+            "white": "#BAC2DE",
+            "yellow": "#F9E2AF"
+        },
+        {
             "background": "#000B17",
             "black": "#45475A",
             "blue": "#89B4FA",
@@ -302,6 +325,29 @@
             "foreground": "#CDD6F4",
             "green": "#A6E3A1",
             "name": "Catppuccin Mocha Blue Modded",
+            "purple": "#F5C2E7",
+            "red": "#F38BA8",
+            "selectionBackground": "#585B70",
+            "white": "#BAC2DE",
+            "yellow": "#F9E2AF"
+        },
+        {
+            "background": "#2C2C2C",
+            "black": "#45475A",
+            "blue": "#89B4FA",
+            "brightBlack": "#585B70",
+            "brightBlue": "#89B4FA",
+            "brightCyan": "#94E2D5",
+            "brightGreen": "#A6E3A1",
+            "brightPurple": "#F5C2E7",
+            "brightRed": "#F38BA8",
+            "brightWhite": "#A6ADC8",
+            "brightYellow": "#F9E2AF",
+            "cursorColor": "#F5E0DC",
+            "cyan": "#94E2D5",
+            "foreground": "#CDD6F4",
+            "green": "#A6E3A1",
+            "name": "Catppuccin Mocha Gray Modded",
             "purple": "#F5C2E7",
             "red": "#F38BA8",
             "selectionBackground": "#585B70",
