--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -4,20 +4,39 @@
     "actions": 
     [
         {
-            "command": 
-            {
-                "action": "copy",
-                "singleLine": false
-            },
-            "keys": "ctrl+c"
+            "command": "unbound"
         },
         {
-            "command": "paste",
-            "keys": "ctrl+v"
+            "command": { "action": "switchToTab", "index": 0 },
+            "keys": "ctrl+1"
         },
         {
-            "command": "find",
-            "keys": "ctrl+shift+f"
+            "command": { "action": "switchToTab", "index": 1 },
+            "keys": "ctrl+2"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 2 },
+            "keys": "ctrl+3"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 3 },
+            "keys": "ctrl+4"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 4 },
+            "keys": "ctrl+5"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 5 },
+            "keys": "ctrl+6"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 6 },
+            "keys": "ctrl+7"
+        },
+        {
+            "command": { "action": "switchToTab", "index": 7 },
+            "keys": "ctrl+8"
         },
         {
             "command": 
@@ -29,11 +48,29 @@
             "keys": "alt+shift+d"
         },
         {
+            "command": "find",
+            "keys": "ctrl+shift+f"
+        },
+        {
+            "command": 
+            {
+                "action": "nextTab"
+            },
+            "keys": "tab"
+        },
+        {
             "command": 
             {
                 "action": "nextTab"
             },
             "keys": "alt+l"
+        },
+        {
+            "command": 
+            {
+                "action": "prevTab"
+            },
+            "keys": "shift+tab"
         },
         {
             "command": 
@@ -51,9 +88,6 @@
             "keys": "alt+shift+enter"
         },
         {
-            "command": "unbound"
-        },
-        {
             "command": "markMode"
         },
         {
@@ -66,8 +100,8 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-    "initialCols": 155,
-    "initialRows": 43,
+    "initialCols": 110,
+    "initialRows": 30,
     "launchMode": "focus",
     "newTabMenu": 
     [
@@ -142,6 +176,24 @@
                 "hidden": false,
                 "icon": "https://www.nushell.sh/icon.png",
                 "name": "Nu Shell"
+            },
+            {
+                "guid": "{16208362-94fc-5b1f-a491-5b2624d5ab56}",
+                "hidden": true,
+                "name": "Visual Studio Debug Console",
+                "source": "VSDebugConsole"
+            },
+            {
+                "guid": "{cb00f2e8-8b73-5a87-8ee9-bd77e271a2a6}",
+                "hidden": false,
+                "name": "Developer Command Prompt for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{9b149c0b-d95a-5487-bcca-92ca5bde1c11}",
+                "hidden": false,
+                "name": "Developer PowerShell for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
             }
         ]
     },
@@ -870,6 +922,7 @@
             "tab": 
             {
                 "background": "#303446FF",
+                "iconStyle": "default",
                 "showCloseButton": "always",
                 "unfocusedBackground": null
             },
@@ -881,6 +934,9 @@
             "window": 
             {
                 "applicationTheme": "dark",
+                "experimental.rainbowFrame": false,
+                "frame": null,
+                "unfocusedFrame": null,
                 "useMica": false
             }
         },
@@ -889,6 +945,7 @@
             "tab": 
             {
                 "background": "#EFF1F5FF",
+                "iconStyle": "default",
                 "showCloseButton": "always",
                 "unfocusedBackground": null
             },
@@ -900,6 +957,9 @@
             "window": 
             {
                 "applicationTheme": "light",
+                "experimental.rainbowFrame": false,
+                "frame": null,
+                "unfocusedFrame": null,
                 "useMica": false
             }
         },
@@ -908,6 +968,7 @@
             "tab": 
             {
                 "background": "#24273AFF",
+                "iconStyle": "default",
                 "showCloseButton": "always",
                 "unfocusedBackground": null
             },
@@ -919,6 +980,9 @@
             "window": 
             {
                 "applicationTheme": "dark",
+                "experimental.rainbowFrame": false,
+                "frame": null,
+                "unfocusedFrame": null,
                 "useMica": false
             }
         },
@@ -927,6 +991,7 @@
             "tab": 
             {
                 "background": "#1E1E2EFF",
+                "iconStyle": "default",
                 "showCloseButton": "always",
                 "unfocusedBackground": null
             },
@@ -938,6 +1003,9 @@
             "window": 
             {
                 "applicationTheme": "dark",
+                "experimental.rainbowFrame": false,
+                "frame": null,
+                "unfocusedFrame": null,
                 "useMica": false
             }
         }
