--- a/glazevm/config.yaml
+++ b/glazevm/config.yaml
@@ -1,6 +1,6 @@
 general:
   # Whether to automatically focus windows underneath the cursor.
-  focus_follows_cursor: true
+  focus_follows_cursor: false
 
   # Whether to jump the cursor between windows focused by the WM.
   cursor_follows_focus: false
@@ -161,7 +161,7 @@ keybindings:
   # - command: "focus down"
   #   bindings: ["Alt+J", "Alt+Down"]
 
-  # - command: "focus left"
+  - command: "focus left"
     bindings: ["Ctrl+Alt+H", "Alt+Left"]
   - command: "focus right"
     bindings: ["Ctrl+Alt+L", "Alt+Right"]
