--- a/glzr/glazewm/config.yaml
+++ b/glzr/glazewm/config.yaml
@@ -157,13 +157,26 @@ binding_modes:
 keybindings:
   # Shift focus in a given direction.
   - commands: ['focus --direction left']
-    bindings: ['alt+h', 'alt+left']
+    bindings: [
+      'alt+h', 
+      # 'alt+left'
+    ]
   - commands: ['focus --direction right']
-    bindings: ['alt+l', 'alt+right']
+    bindings: [
+      'alt+l', 
+      # 'alt+right'
+    ]
   - commands: ['focus --direction up']
-    bindings: ['alt+k', 'alt+up']
+    bindings: [
+      'alt+k', 
+      # 'alt+up'
+    ]
   - commands: ['focus --direction down']
-    bindings: ['alt+j', 'alt+down']
+    bindings: [
+      'alt+j', 
+      # 'alt+down'
+    ]
+
 
   # Move focused window in a given direction.
   - commands: ['move --direction left']
